# finance-tracker-app

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  config.py  main.py  package.json  pyproject.toml  requirements.txt
backend/plaid/: client.py  routes.py
backend/plaid_routes/: __init__.py  client.py  routes.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css  supabaseClient.ts
frontend/src/components/: Auth.tsx  FireSandboxWebhookButton.tsx  PlaidItemsTable.tsx  Transactions.tsx
frontend/src/plaid/: LinkButton.jsx  LinkButton.tsx
frontend/src/types/: supabase.ts
